# qdm

./: CMakeLists.txt  Main.qml  README.md  downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h  javahelper.cpp  javahelper.h  main.cpp
android/src/org/qtproject/qmldownloadmanager/: MyJavaClass.java
